--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <header>
             <h1  student world>
             <ul>
-                <li>Alana</li>
-                <li>Alexander</li>
-                <li>Ana Gabriela</li>
+                <li>Alana <img src="ALANA.jpeg" 
+                <li>Alexander <img src="BALAO.jpeg"
+                <li>Ana Gabriela</li> 
                 <li>Ana Julia</li>
                 <li>Bruna</li>
                 <li>Danyel</li>
